[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buildings/Stockpile.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 1, 1 )

[node name="Stockpile" type="Spatial"]
script = ExtResource( 1 )

[node name="PaletteStaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PaletteStaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="PaletteStaticBody"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="Crates" type="Spatial" parent="."]

[node name="Crate1" type="MeshInstance" parent="Crates"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("")

[node name="Crate2" type="MeshInstance" parent="Crates"]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, 0, 1.5, 0 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("")

[node name="Crate3" type="MeshInstance" parent="Crates"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("")

[connection signal="input_event" from="PaletteStaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="PaletteStaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="PaletteStaticBody" to="." method="_on_StaticBody_mouse_exited"]
